--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ colorama==0.4.6
 dataclasses-json==0.6.7
 distro==1.9.0
 exceptiongroup==1.2.2
+faiss-cpu==1.8.0.post1
 frozenlist==1.5.0
 gitdb==4.0.12
 GitPython==3.1.44
